@@ -1,5 +1,10 @@
 *CVS*
 
+* Added counter_sql option for has_many associations [bitsweat]. Documentation:
+
+    <tt>:counter_sql</tt> - specify a complete SQL statement to fetch the size of the association. If +:finder_sql+ is
+    specified but +:counter_sql+, +:counter_sql+ will be generated by replacing SELECT ... FROM with SELECT COUNT(*) FROM.
+
 * Fixed that methods wrapped in callbacks still return their original result #260 [bitsweat]
 
 * Fixed the Inflector to handle the movie/movies pair correctly #261 [Scott Baron]
